update pre-commit hook to use gofumpt and golines for formatting

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -3,7 +3,7 @@ pre-commit:
   commands:
     fmt:
       glob: "*.go"
-      run: gofmt -l -w {staged_files}
+      run: gofumpt -l -w {staged_files} && golines -w {staged_files}
 
     lint:
       glob: "*.go"
